<resources>
    <string name="date">Date:</string>
    <string name="last_saved_date">Last saved:</string>
    <string name="by">By:</string>
    <string name="submitted_on">Submitted on:</string>
    <string name="update_toast">Can\'\t download updates: SD not present</string>
    <string name="form_present">This form already exist in saved list, do you want continue?</string>
    <string name="delete_form">Do you want to delete the selected form?</string>
    <string name="send_all">Send all form</string>
    <string name="grasp">GRASP - Geo Referential realtime Acquisition Statistic Platform</string>
    <string name="designed">Designed and Developed by Brains Engineering srl</string>
    <string name="tab_new">New</string>
    <string name="tab_saved">Saved</string>
    <string name="tab_completed">Completed</string>
    <string name="tab_submitted">Submitted</string>
    <string name="tab_finalized">Pending</string>
    <string name="bad_uri">Bad URI: </string>
    <string name="parent_form_not_exist">Parent form does not exist </string>
    <string name="more_form">More than one possible parent form</string>
    <string name="unrecognized_uri">unrecognized URI:</string>
    <string name="form_uncompleted">Form uncompleted</string>
    <string name="blank_answer">The form is uncompleted please check blank answer</string>
    <string name="server_url_not_inserted">The server url is not inserted, please enter it</string>
    <string name="negative_choise">No</string>
    <string name="positive_choise">Ok</string>
    <string name="send_form">Do you want to send the form?</string>
    <string name="check_new_app">Update the Application</string>
    <string name="checking_server">Checking server...</string>
    <string name="negative">No</string>
    <string name="app_name">GRASP Mobile Tool</string>
    <string name="main_menu_message">GRASP MOBILE TOOL</string>
    <string name="main_menu_details">This is GRASP data collection</string>
    <string name="new_form">INBOX</string>
    <string name="list_form">LIST FORMS</string>
    <string name="settings">SETTINGS</string>
    <string name="credits">ABOUT</string>
    <string name="help">HELP</string>
    <string name="home">HOME</string>
    <string name="exit_button">EXIT</string>
    <string name="contDesc">Description</string>
    <string name="accept_location">Get GPS coordinates</string>
	<string name="accuracy">Accuracy</string>
	<string name="activity_not_found">No activity found to handle: %s</string>
	<string name="add_another">Yes</string>
	<string name="add_another_repeat">Add another entry?</string>
	<string name="add_repeat">Add a new entry?</string>
	<string name="add_repeat_no">No</string>
	<string name="advance">forward to\nnext\npage</string>
	<string name="altitude">Altitude</string>
	<string name="audio_file_error">No audio file was specified.</string>
	<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
	<string name="backup">back to\nprevious\nprompt</string>
	<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
	<string name="cancel">Cancel</string>
	<string name="cancel_loading_form">Cancel</string>
	<string name="cancel_location">Cancel</string>
	<string name="cancel_saving_form">Cancel</string>
	<string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete.</string>
	<string name="capture_audio">Record Sound</string>
	<string name="capture_image">Take Picture</string>
	<string name="capture_video">Record Video</string>
	<string name="change_language">Change Language</string>
	<string name="change_password">Password</string>
	<string name="change_server_url">Server URL</string>
	<string name="change_server_telephone">Server Telephone</string>
	<string name="change_client_telephone">Client Telephone</string>
	<string name="change_username">ODK Username</string>
	<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
	<string name="clear_answer">Remove response</string>
	<string name="clear_answer_ask">Remove This Response?</string>
	<string name="clear_answer_no">Cancel</string>
	<string name="completed_data">Complete (%s)</string>
	<string name="data">Saved Forms</string>
	<string name="data_saved_error">Sorry, form save failed!</string>
	<string name="data_saved_ok">Form successfully saved!</string>
	<string name="default_completed">Default to Finalized</string>
	<string name="default_completed_summary">Mark form as finalized by default</string>
	<string name="default_server_url"></string>
	<string name="default_server_telephone"></string>
	<string name="default_client_telephone"></string>
	<string name="default_connection_type"></string>
	<string name="delete_confirm">Delete %s form(s)?</string>
	<string name="delete_file">Delete Selected</string>
	<string name="delete_no">Do Not Delete</string>
	<string name="delete_repeat">Remove group</string>
	<string name="delete_repeat_ask">Remove This Group?</string>
	<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
	<string name="delete_repeat_no">Cancel</string>
	<string name="delete_yes">Delete Forms</string>
	<string name="discard_answer">Remove response</string>
	<string name="discard_group">Remove group</string>
	<string name="download">Get Selected</string>
	<string name="download_forms_result">Download Result</string>
	<string name="downloading_data">Connecting to Server</string>
	<string name="download_all_successful">All forms downloaded successfully.</string>
	<string name="download_complete">Form successfully received</string>
	<string name="download_failed_with_error">Form \"%1$s\" failed. %2$s.</string>
	<string name="do_not_change">Cancel</string>
	<string name="do_not_exit">Cancel</string>
	<string name="do_not_save">Ignore Changes</string>
	<string name="enter">start</string>
	<string name="entering_repeat">Yes</string>
	<string name="entering_repeat_ask">Add New Group?</string>
	<string name="enter_data">Fill Blank Form</string>
	<string name="enter_data_button">Fill Blank Form</string>
	<string name="enter_data_description">You are at the start of the form. Swipe the screen as shown below to begin.</string>
	<string name="enter_data_message">To navigate, swipe your finger horizontally on the screen as if turning pages in a book. Press the Menu button for more choices.</string>
	<string name="error_downloading">Error Getting Form</string>
	<string name="error_occured">Error Occurred</string>
	<string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
	<string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
	<string name="file_deleted_ok">%s form(s) successfully deleted!</string>
	<string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
	<string name="file_invalid">File: %s is invalid.</string>
	<string name="file_missing">File: %s is missing.</string>
	<string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
	<string name="form_renamed">%1$s was renamed %2$s.</string>
	<string name="getting_location">Loading Location</string>
	<string name="get_barcode">Get Barcode</string>
	<string name="get_forms">Get Blank Form</string>
	<string name="get_location">Get GPS coordinates</string>
	<string name="provider_disabled_error">Please activate GPS and/or WIFI location</string>
	<string name="invalid_answer_error">Check for red fields they are invalid!</string>
	<string name="jump_to_beginning">Go To Start</string>
	<string name="jump_to_end">Go To End</string>
	<string name="jump_to_previous">Go Up</string>
	<string name="latitude">Latitude</string>
	<string name="leave_repeat_yes">No</string>
	<string name="leaving_repeat">Add entry</string>
	<string name="leaving_repeat_ask">Add a new entry</string>
	<string name="list_failed_with_error">Form listing failed. %s.</string>
	<string name="loading_form">Loading Form</string>
	<string name="load_remote_form_error">Error Getting Form List</string>
	<string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
	<string name="location_provider">Using %1$s provider. Please wait for greater accuracy.</string>
	<string name="location_accuracy">Accuracy is %1$s m</string>
	<string name="longitude">Longitude</string>
	<string name="manage_files">Delete Saved Form</string>
	<string name="mark_finished">Mark form as finalized</string>
	<string name="no">No</string>
	<string name="noselect_error">Sorry, you have not selected any forms!</string>
	<string name="no_capture">Nothing recorded yet.</string>
	<string name="no_connection">No network connection available</string>
	<string name="no_items_display">Nothing available to display.</string>
	<string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
	<string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
	<string name="no_items_error">Nothing available to %s!</string>
	<string name="no_sd_error">Sorry, your memory card is not working!</string>
	<string name="ok">OK</string>
	<string name="one_capture">Multimedia recorded.</string>
	<string name="parse_error">Sorry, unable to parse form.</string>
	<string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
	<string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
	<string name="password">Password</string>
	<string name="play_audio">Play Sound</string>
	<string name="play_video">Play Video</string>
	<string name="please_wait">Please wait a few moments.</string>
	<string name="please_wait_long">Please wait. This could take a few minutes.</string>
	<string name="quit_application">Exit %s</string>
	<string name="quit_entry">Save Form as Completed</string>
	<string name="refresh">SYNCHRONIZE</string>
	<string name="replace_audio">Replace Sound</string>
	<string name="replace_barcode">Replace Barcode</string>
	<string name="replace_image">Replace Picture</string>
	<string name="replace_location">Replace Location</string>
	<string name="replace_video">Replace Video</string>
	<string name="required_answer_error">Check for yellow fields they are required!</string>
	<string name="review">continue</string>
	<string name="review_data">Edit Saved Form</string>
	<string name="review_data_button">Edit Saved Form</string>
	<string name="saved_data">Incomplete (%s)</string>
	<string name="save_all_answers">Save Form</string>
	<string name="save_data_message">Please save form to keep your responses.</string>
	<string name="save_enter_data_description">You are at the end of the form.</string>
	<string name="saving_form">Saving Form</string>
	<string name="send">send</string>
	<string name="server_telephone">Server Telephone</string>
	<string name="client_telephone">Client Telephone</string>
	<string name="server_preferences">Server</string>
	<string name="click_to_web">Tap to visit http://</string>
	<string name="client">Client</string>
	<string name="font_size">Text Font Size</string>
	<string name="change_font_size">Text Font Size</string>
	<string name="check_connection">Check Server Connection</string>
	<string name="passwordText">Enter the password</string>
	<string name="button_in">Login</string>
	<string name="suggest">...password</string>
	<string name="time_before">Time before re-submit allowed</string>
	<string name="sending_method">Sending Method</string>
	<string name="portocol_choice">Protocol</string>
	<string name="choose_protocol">Choose the protocol</string>
	<string name="digit_server_ip">Digit server IP</string>
	<string name="server_IP">IP</string>
	<string name="digit_server_port">Digit server port</string>
	<string name="server_port">Port</string>
</resources>